--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         apiId: 5597433
       });
     </script>
-    <script src="/main.js"></script>
+    <script src="main.js"></script>
   </head>
   <body>
   </body>
