--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <script src="gh-pages/main.js"></script>
   </head>
   <body>
+    <button class="startbutton">Start</button>
   </body>
 </html>
