--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         apiId: 5597433
       });
     </script>
-    <script src="gh-pages/main.js"></script>
+    <script src="VKMDT/main.js"></script>
   </head>
   <body>
     <button class="startbutton">Start</button>
