--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <script src="main.js"></script>
   </head>
   <body>
-    <button class="startbutton" onclick="downloader.getFiles()">Start</button>
+    <button class="startbutton" onclick="vk.getLoginStatus()">Start</button>
   </body>
 </html>
